force-app/main/default/objects/ChargeOver_Transaction_Applied__c/ChargeOver_Transaction_Applied__c.object-meta.xml
<CustomObject>
    <label>ChargeOver Transaction Applied</label>
    <nameField>
        <displayFormat>TA-{000000}</displayFormat>
        <label>Transaction Applied Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChargeOver Transactions Applied</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>