force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Applied__c.field-meta.xml
<CustomField>
    <fullName>Applied__c</fullName>
    <label>Applied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>