force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Billing_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rep_Name__c</fullName>
    <description>The name of the Billing Rep that processed the payment in the billing system</description>
    <label>Billing Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>