force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <description>The name of the page used for submitting a payment</description>
    <label>Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>