force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Chargeback_Prevention_Alert_Status__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Prevention_Alert_Status__c</fullName>
    <description>The Chargeback Prevention Alert Status from the parent Transaction record</description>
    <formula>TEXT(ChargeOver_Transaction__r.Chargeback_Prevention_Alert_Status__c)</formula>
    <label>Chargeback Prevention Alert Status</label>
    <type>Text</type>
</CustomField>