force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Chargeback_Status__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Status__c</fullName>
    <description>The Chargeback Status from the parent Transaction record</description>
    <formula>TEXT( ChargeOver_Transaction__r.Chargeback_Status__c )</formula>
    <label>Chargeback Status</label>
    <type>Text</type>
</CustomField>