force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/ChargeOver_Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChargeOver Invoice Line</label>
    <referenceTo>ChargeOver_Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>ChargeOver Transactions Applied</relationshipLabel>
    <relationshipName>ChargeOver_Transactions_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>