force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/ChargeOver_Transaction__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChargeOver Transaction</label>
    <referenceTo>ChargeOver_Transaction__c</referenceTo>
    <relationshipLabel>ChargeOver Transactions Applied</relationshipLabel>
    <relationshipName>ChargeOver_Transactions_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>