force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Days_Between_Transaction_and_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Transaction_and_Due_Date__c</fullName>
    <description>The number of days between the Transaction and the Due Date on the Invoice.</description>
    <formula>Transaction_Date__c -  Invoice_Due_Date_on_Transaction_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Between Transaction and Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>