force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Days_Between_Transaction_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Transaction_Start__c</fullName>
    <formula>Transaction_Date__c  -  DATEVALUE(  ChargeOver_Invoice__r.ChargeOver_Subscription__r.Subscription_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Between Transaction &amp; Start</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>