force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Equal_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Equal_Transaction_Amount__c</fullName>
    <formula>IF( Applied__c = ChargeOver_Transaction__r.Transaction_Amount__c , TRUE, FALSE)</formula>
    <label>Equal Transaction Amount</label>
    <type>Checkbox</type>
</CustomField>