force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/First_Payment_Applied_to_Client__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Applied_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the transaction was was part of the very first transaction made by the client</description>
    <inlineHelpText>Will be marked True if this transaction was part of the first payment ever made by the client</inlineHelpText>
    <label>First Payment Applied to Client</label>
    <type>Checkbox</type>
</CustomField>