force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/First_Payment_Applied_to_Subscription__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Applied_to_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the transaction was was part of the very first transaction made on the related Subscription</description>
    <inlineHelpText>Will be marked True if this transaction was part of the first payment applied to this specific subscription</inlineHelpText>
    <label>First Payment Applied to Subscription</label>
    <type>Checkbox</type>
</CustomField>