force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Include_for_Commission_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Include_for_Commission_Reporting__c</fullName>
    <description>A checkbox that indicates that this Tx Applied record should be included in sales and commission reporting</description>
    <formula>IF(AND(
ISPICKVAL(Transaction_Status__c, &quot;Success&quot;),
ChargeOver_Invoice_Line__r.Commissionable__c =TRUE,
 OR(Transaction_Type_Name__c = &quot;Payment&quot;,  Transaction_Type_Name__c =&quot;Refund&quot;),
 ChargeOver_Transaction__r.Voided_Payment__c =FALSE,
 Transaction_Type_Details__c !=&quot;void&quot;),true,false)</formula>
    <label>Include for Commission Reporting?</label>
    <type>Checkbox</type>
</CustomField>