force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Invoice_Due_Date_on_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date_on_Transaction_Date__c</fullName>
    <description>The Invoice Due Date at the time of the transaction was processed.</description>
    <inlineHelpText>Since the Invoice Due Date changes, this field displays the Invoice Due Date at the time the transaction was processed.</inlineHelpText>
    <label>Invoice Due Date on Transaction Date</label>
    <type>Date</type>
</CustomField>