force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/of_Remaining_Invoice_Balance_Attempted__c.field-meta.xml
<CustomField>
    <fullName>of_Remaining_Invoice_Balance_Attempted__c</fullName>
    <description>The percentage of the remaining invoice balance that was attempted for the transaction.</description>
    <label>% of Remaining Invoice Balance Attempted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>33%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>