force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Original_Billing_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Billing_Rep_Name__c</fullName>
    <formula>IF( Original_ChargeOver_Transaction__c =&quot;&quot;,  Billing_Rep_Name__c  , Original_ChargeOver_Transaction__r.Billing_Rep_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Billing Rep Name</label>
    <type>Text</type>
</CustomField>