force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Original_ChargeOver_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Original_ChargeOver_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original ChargeOver Transaction</label>
    <referenceTo>ChargeOver_Transaction__c</referenceTo>
    <relationshipLabel>ChargeOver Transactions Applied (Original ChargeOver Transaction)</relationshipLabel>
    <relationshipName>ChargeOver_Transactions_Applied1</relationshipName>
    <type>Lookup</type>
</CustomField>