force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Original_ChargeOver_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_ChargeOver_Transaction_Date__c</fullName>
    <formula>IF( Original_ChargeOver_Transaction__c =&quot;&quot;,  Transaction_Date__c , Original_ChargeOver_Transaction__r.Transaction_Date__c)</formula>
    <label>Original ChargeOver Transaction Date</label>
    <type>Date</type>
</CustomField>