force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Original_Payment_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Original_Payment_Processed_By__c</fullName>
    <formula>IF( Original_ChargeOver_Transaction__c =&quot;&quot;,  Payment_Processed_By__c ,  Original_ChargeOver_Transaction__r.Payment_Processed_By__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Payment Processed By</label>
    <type>Text</type>
</CustomField>