force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Original_Payment_Processing_Channel__c.field-meta.xml
<CustomField>
    <fullName>Original_Payment_Processing_Channel__c</fullName>
    <description>The channel though which the client&apos;s original payment was processed</description>
    <formula>IF((Original_ChargeOver_Transaction__c= &quot;&quot;),  TEXT(Payment_Processing_Channel__c)  ,  TEXT(Original_ChargeOver_Transaction__r.Payment_Processing_Channel__c  ))</formula>
    <label>Original Payment Processing Channel</label>
    <type>Text</type>
</CustomField>