force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Payment_Gateway_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Error_Code__c</fullName>
    <label>Payment Gateway Error Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>