force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Payment_Gateway_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Nickname__c</fullName>
    <label>Payment Gateway Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>