force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Payment_Gateway_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Type__c</fullName>
    <label>Payment Gateway Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>