force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Payment_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processed_By__c</fullName>
    <label>Payment Processed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>