force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Pullback_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Pullback_Adjustment__c</fullName>
    <description>This is the pullback adjustment field to mark when a payment will be pulled back from commission.</description>
    <label>Pullback Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>