force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_ID__c</fullName>
    <description>18 character ID</description>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe ID</label>
    <type>Text</type>
</CustomField>