force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Transaction_Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Attempt_Number__c</fullName>
    <description>The attempt number for the transaction on the related invoice line. 0 means first attempt for payment (generally the first automated attempt), 1 means first re-attempt, 2 means 2nd re-attempt, etc</description>
    <inlineHelpText>The attempt number for the transaction on the related invoice line. 0 means first attempt for payment (generally the first automated attempt), 1 means first re-attempt, 2 means 2nd re-attempt, etc</inlineHelpText>
    <label>Transaction Attempt Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>