force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Transaction_Source__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Source__c</fullName>
    <description>The source of the transaction. Used by the ChargeOver system to indicate if the transaction was performed by a billing rep, client, automated process, API, etc</description>
    <label>Transaction Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>admin</fullName>
            </value>
            <value>
                <fullName>api</fullName>
            </value>
            <value>
                <fullName>cron</fullName>
            </value>
            <value>
                <fullName>resque</fullName>
            </value>
            <value>
                <fullName>user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>