force-app/main/default/objects/ChargeOver_Transaction_Applied__c/fields/Transaction_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_Name__c</fullName>
    <label>Transaction Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>